--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -1,10 +1,12 @@
+ul {
+    margin-bottom: 0;
+}
 ul.spot-list {
     width: 100%;
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap:20px;
-    margin-bottom: 30px;
 }
 
 ul.spot-list li {
@@ -32,7 +34,6 @@ ul.spot-list li span {
 
 ul.notifications {
     list-style: none;
-    margin-bottom: 15px;
 }
 ul.notifications li {
     font-size: 16px;
