--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body, input, button {
   font-size: 14;
 }
 
-.container {
+.custom-container {
   margin: 80px auto 0;
   max-width: 450px;
   width: 100%;
